fix: fix tooltip not showing

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -5,7 +5,7 @@
   @apply invisible absolute;
 }
 
-.has-tooltip:hover ~ .tooltip {
+.has-tooltip:hover .tooltip {
   @apply visible z-10;
 }
 
